[build-system]
requires = ['setuptools', 'setuptools_scm', 'setuptools-git-versioning']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
py-modules = []

[tool.setuptools-git-versioning]
enabled = true
template = '{tag}'
dirty_template = '{tag}'

[project]
name = 'flutter-hello-world'
readme = 'README.md'
requires-python = '>=3.11'
dynamic = ['version']
dependencies = [
    'aws-cdk-lib',
    'constructs',
    'scala-cdk',
]
keywords= ['aws', 'resources', 'python', 'flutter', 'fargate']
authors = [{name = 'SCALA.AI, INC.', email = 'jakub.zeman@scala.ai'}]

[project.optional-dependencies]
dev = [
    'pytest',
    'setuptools-scm',
    'coverage',
    'aws-cdk-lib',
    'pytest-datadir',
    'scala-cdk',
    'pre-commit==2.20.0',
    'black==22.10.0',
    'pytest-black==0.3.12',
    'isort==5.12.0',
    'pytest-isort==3.1.0',
    'flake8==5.0.4',
]

[tool.pytest.ini_options]
addopts = "--isort"

[tool.black]
target-version = ['py311']
line-length = 100
skip-string-normalization = true
exclude = '''
(
  /(
      \.build
      | \.venv
      | venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [
    ".build",
    ".venv",
    "venv",
] 